--- a/gb/21/10/22/n13322492.md
+++ b/gb/21/10/22/n13322492.md
@@ -11,41 +11,32 @@
 <p>“哪边可以帮狗狗猫咪接种狂犬病疫苗呢？”民众可参加屏东县动物防疫所举办的“狂犬病疫苗巡回注射活动”或自行携带犬猫至动物医院或动物诊所完成狂犬病疫苗注射，未每年替家中饲养的犬猫或食肉目动物完成狂犬病疫苗注射，将依“动物传染病防治条例”处新台币3万元以上15万元以下罚锾。</p>
 <p>责任编辑：唐音</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/10/26/n12502908.md#1">屏东内埔乡出现首例鼬獾验出狂犬病</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/8/20/n13175938.md#1">日本脑炎人畜共通  屏吁养猪户防病媒蚊孳生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/8/23/n13181937.md#1">苏贞昌：走私猫来自狂犬病疫区 将对船长船员最重处分</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/8/28/n13194429.md#1">防堵非洲猪瘟  屏县9月禁厨余 违者重罚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/9/26/n13260977.md#1">响应928世界狂犬病日 县长提醒毛小孩施打疫苗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/9/29/n13269968.md#1">睡觉时蝙蝠落在脖子上 伊州男子患狂犬病身亡</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/10/5/n13283348.md#1">越母女走私非洲猪瘟肉品 检方求处重刑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283710.md#1">世界巧克力大奖亚太区赛 屏东业者夺9金10银</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283669.md#1">培育养殖技术独步全球 东港月子鱼种鱼曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283682.md#1">茑松古典艺术飨宴 7/3日云林展开首场演出</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/2/n10186094.md#1" target="_blank">林辉：天安门杀毛案疑点重重 侦案者冤狱七年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/29/n11287543.md#1" target="_blank">纽约市七位市议员祝贺法轮大法日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/20/n10989886.md#1" target="_blank">共产暴政录：“清理阶级队伍”运动</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/15/n10977691.md#1" target="_blank">伊朗姑娘嘉扎尔?塔瓦纳艾(1) 不一样的人生</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291211.md#1">【未解之谜】精准预测川普遇刺 牧师：美国将在巨大危机后复兴</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287726.md#1">【古道人生】丈夫衣锦荣归 为何夫妻却不能团圆？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/10/21/n13321190.md#1">【古韵流芳】长恨歌引传奇 白居易的来世夙愿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289400.md#1">天下第一都长安城建造多神速？超乎你想像 关键法门为何？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/19/n14293827.md#1">【未解之谜】一万年前谁修改了它们的基因？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/19/n14294310.md#1">【新闻大家谈】中共煽动独狼攻击 苦了中国人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/20/n14294588.md#1">【车评】来自Torino的红 2024 Fiat 500e RED</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/20/n14294616.md#1">【时事军事】特勤局特工怎么看川普遇刺案</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/19/n14293830.md#1">胡春华在三中全会上与党魁并排坐 引猜测</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/19/n14294110.md#1">四川官员的儿媳实名举报公公婆婆资产近亿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/18/n14293406.md#1">火箭军参谋长落马 三中全会递补中委现异常</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/19/n14294437.md#1">缺席《甄嬛传》团综 孙俪携全家游英国</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/19/n14294392.md#1">“武侠影后”郑佩佩去世 刘涛赴美送最后一程?</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/18/n14293656.md#1">大陆名嘴朱丹自曝遭骗光积蓄 案件现最新进展</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/19/n14294326.md#1">《异能》获2024青龙系列大奖大赏 成大赢家</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/19/n14294453.md#1">离婚后相关官司缠身两年 裘莉望彼特撤诉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/19/n14293931.md#1">发长2米多 拥有世界最长头发的女子谈护发</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289663.md#1">摆脱忧郁情绪 四招开胯拉筋有效</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291153.md#1">盘点健康的香草和香料 替你的料理加分</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/21/n14295177.md#1">专家：搭乘飞机若不想有时差 别做这件事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287362.md#1">改善关节炎 6种水果抗发炎</a></li>
-<hr>
-<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/21/10/22/n13322492.htm">狮子乡鼬獾验出狂犬病 屏动防所加强犬猫疫苗</a></p><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651592.md#1">【直播】反对中共活摘器官和侵犯人权行为论坛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651956.md#1">【直播】听证会：保护儿童免受网络犯罪分子侵害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651951.md#1">【军事情报局】东南亚爆发战争 泰国攻入柬埔寨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/22/n13322492.htm">狮子乡鼬獾验出狂犬病 屏动防所加强犬猫疫苗</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/21/10/22/n13322492.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
